# risknet

./: .gitignore  Dockerfile  EDA.html  MANIFEST.in  Makefile  README.md  about.md  best_params_pre.txt  eda.css  entrypoint.sh  index.html  index.md  indexstyle.css  model.html  pyproject.toml  results.html  setup.cfg  setup.py  style.css  team.css  team.html  tutorial.html
src/homebase/: main.py
src/homebase/config/: __init__.py  conf.yaml  handlers.py
src/homebase/jobs/: cloud_etl.py
src/homebase/utils/: log.py  managers.py  system.py
src/risknet/: main.py
src/risknet/config/: __init__.py  conf.yaml  conf_template.yaml  conifg.yaml  handlers.py
src/risknet/jobs/: cloud_etl.py
src/risknet/notebooks/: EDA.ipynb  automated_EDA.ipynb
src/risknet/proc/: encoder.py  fe.py  label_prep.py  parquet.py  reducer.py
src/risknet/run/: model.py  pipeline.py
src/risknet/sys/: managers.py  system.py
src/risknet/utils/: encoder.py  label_prep.py  log.py  managers.py  model.py  pipeline.py  reducer.py  system.py
tests/: test_stub.py
website/: index.md
